--- a/Image Segmentation with Tensorflow.ipynb
+++ b/Image Segmentation with Tensorflow.ipynb
@@ -33,7 +33,8 @@
     "        sess = tf.Session()\n",
     "        my_input_value = # some numpy array, maybe an image\n",
     "        # create your graph, define the operations on our input\n",
-    "        my_output_value = sess.run(my_output_tensor, feed_dict={the_name_of_my_input_tensor: my_input_value})\n",
+    "        my_output_value = sess.run(my_output_tensor, \n",
+    "                                   feed_dict={the_name_of_my_input_tensor: my_input_value})\n",
     "        ```"
    ]
   },
@@ -490,7 +491,7 @@
    "source": [
     "## Bad Way To Do It\n",
     "\n",
-    "So for now, We will try to create a 2 layer down 1 layer up U-Net. Simple, but it will make a point.\n",
+    "So for now, we will try to create a 2 layer down 1 layer up U-Net. Simple, but it will make a point.\n",
     "\n",
     "We start as usual, define our placeholders for the training set (together with the ground truth). Nice thing about placheolders is that you do not need to specify their shape - but as a good practice, we choose to state that these are 4 dimensional tensors (stack of images). We also state that our data consist of single channel images and ground truth consist of two channel images (one channel per segmentation class. i.e. the background and the disks)."
    ]
@@ -622,7 +623,7 @@
     "features_up = 32\n",
     "stddev_up = np.sqrt(2.0/ (3*3*features_up))\n",
     "\n",
-    "upconv_w = tf.Variable(tf.truncated_normal(shape=[2, 2, features_up//2, features_up], stddev=stddev_up)) #why just decrease the depth? why not decrease with another conv layer? what is happening here?\n",
+    "upconv_w = tf.Variable(tf.truncated_normal(shape=[2, 2, features_up//2, features_up], stddev=stddev_up)) #why not decrease with another conv layer?\n",
     "upconv_b = tf.Variable(tf.constant(0.1, shape=[features_up//2]))\n",
     "upconv_input_shape = tf.shape(l2_conv2)\n",
     "upconv_output_shape = tf.stack([upconv_input_shape[0], \n",
