More typo fixes

--- a/Image Segmentation with Tensorflow.ipynb
+++ b/Image Segmentation with Tensorflow.ipynb
@@ -1013,7 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function builds upon [tf.nn.conv2d](https://www.tensorflow.org/api_docs/python/tf/nn/conv2d) by creating its own kernel. We define the our kernel parameters using the [tf.get_variable](https://www.tensorflow.org/api_docs/python/tf/get_variable) instead of [tf.Variable](https://www.tensorflow.org/api_docs/python/tf/Variable). Note how we do not really initialize the variable but point it to an initializer.\n",
+    "This function builds upon [tf.nn.conv2d](https://www.tensorflow.org/api_docs/python/tf/nn/conv2d) by creating its own kernel. We define the kernel parameters using the [tf.get_variable](https://www.tensorflow.org/api_docs/python/tf/get_variable) instead of [tf.Variable](https://www.tensorflow.org/api_docs/python/tf/Variable). Note how we do not really initialize the variable but point it to an initializer.\n",
     "\n",
     "Later, we will call this *conv2d* function under a [scope](https://www.tensorflow.org/programmers_guide/variable_scope) name, e.g. *hidden_conv_layer*. Then our *weight* variable will be created under that scope and Tensorflow will name it as *hidden_conv_layer/weight* automatically. Less work for us and more readable code.\n",
     "\n",
@@ -1082,7 +1082,7 @@
    "source": [
     "We could use these functions to create our network but lets add a few more layer of abstraction. We will create our 'contraction' layer with the *conv_layer* function and 'expansion' layer with the *upconv_layer* function.\n",
     "\n",
-    "Note how we use the [tf.variable_scope](https://www.tensorflow.org/programmers_guide/variable_scope#variable_scope_example). As decribed previously, *conv2d* function is called under the *hidden_conv_layer* scope such that any variables created by [tf.get_variable](https://www.tensorflow.org/programmers_guide/variable_scope#understanding_tfget_variable) are named by appending the scope name as a prefix. e.g. *hidden_conv_layer/biases* or *output_conv_layer/biases*. But it does not matter for variables created by other means than [tf.get_variable](https://www.tensorflow.org/programmers_guide/variable_scope#understanding_tfget_variable), e.g. *kernel_shape* and *bias_shape*."
+    "Note how we use the [tf.variable_scope](https://www.tensorflow.org/programmers_guide/variable_scope#variable_scope_example). As decribed previously, *conv2d* function is called under the *hidden_conv_layer* scope such that any variables created by [tf.get_variable](https://www.tensorflow.org/programmers_guide/variable_scope#understanding_tfget_variable) are named by appending the scope name as a prefix. e.g. *hidden_conv_layer/biases* or *output_conv_layer/biases*. But it does not matter for variables created by means other than [tf.get_variable](https://www.tensorflow.org/programmers_guide/variable_scope#understanding_tfget_variable), e.g. *kernel_shape* and *bias_shape*."
    ]
   },
   {
@@ -1645,8 +1645,7 @@
     "## Input Pipelines: *TFRecords*\n",
     "\n",
     "Let's go one more step and try to use [TFRecords](https://www.tensorflow.org/api_guides/python/python_io#tfrecords_format_details) as noted [here](https://www.tensorflow.org/programmers_guide/reading_data#file_formats). We first create and save a few hundred images into a [TFRecords](https://www.tensorflow.org/api_guides/python/python_io#tfrecords_format_details) file.\n",
-    "- If you generate your own data, you can always save your image files using other libraries for later use. </summary>\n",
-    "Scikit-image is a pain to [install](http://scikit-image.org/docs/stable/install.html) if you don't use [anaconda](https://www.continuum.io/downloads). OpenCV is easy to [install](https://pypi.python.org/pypi/opencv-python) and useful for many other things... Sadly, neither of them can read/write 64 bit images. I have included a sample code using OpenCV's xml/yml tools here but this is barely better than using numpy.save(). Then, for example, you could use the *read_data* function instead of the *generator* in the next cell.\n",
+    "- If you generate your own data, you can always save your image files using other libraries for later use. Scikit-image is a pain to [install](http://scikit-image.org/docs/stable/install.html) if you don't use [anaconda](https://www.continuum.io/downloads). OpenCV is easy to [install](https://pypi.python.org/pypi/opencv-python) and useful for many other things... Sadly, neither of them can read/write 64 bit images. I have included a sample code using OpenCV's xml/yml tools here but this is barely better than using numpy.save(). Then, for example, you could use the *read_data* function instead of the *generator* in the next cell.\n",
     "\n",
     "    ```python\n",
     "    import cv2\n",
@@ -1829,15 +1828,15 @@
    "source": [
     "### Explanations\n",
     "\n",
-    "What did we do here? We have created a [reader](https://www.tensorflow.org/api_guides/python/io_ops#Readers) object and fed its *read()* member-function a queue of filenames. In our case this queue consists of a single *filename=\"somewhere_in)your_pc/data.tfrerecords\"* which contains 800 samples. \n",
+    "What did we do here? We have created a [reader](https://www.tensorflow.org/api_guides/python/io_ops#Readers) object and fed its *read()* member-function a queue of filenames. In our case this queue consists of a single *filename=\"somewhere_in_your_pc/data.tfrerecords\"* which contains 800 samples. \n",
     "\n",
-    "Now, somewhere in that cell, image and masks *tensors* must have been assigned a *dequeue* operation i.e. they must have become a *dequeue* operation/tensor such that when we run our graph in a session later, the data flows as expected. I am guessing it happens in the *reader.read()* operation based on its [description](https://www.tensorflow.org/api_docs/python/tf/ReaderBase#read).\n",
+    "Now, somewhere in that cell, image and masks *tensors* must have been assigned a as *dequeue* operation such that when we run our graph in a session later, the data flows as expected. I am guessing it happens in the *reader.read()* operation based on its [description](https://www.tensorflow.org/api_docs/python/tf/ReaderBase#read).\n",
     "\n",
     "What I understand after checking these [awesome lecture notes](http://web.stanford.edu/class/cs20si/lectures/notes_09.pdf) is that, in general, we should be creating a *queue* containing addresses (filenames, in-file iterators, whatever) to our samples. The *reader.read()* gives us a tensor by *dequeueing* from this queue. Then, if we want to, we use batching (we will talk about this in a few paragraphs).\n",
     "\n",
     "#### I am not sure but...\n",
     "\n",
-    "This *dequeue* operation needs a *queue* to work on. In other problems involving multiple input files where each sample **is** its own file, we would use a [filename queue producer](https://www.tensorflow.org/api_docs/python/tf/train/string_input_producer) and then a [whole-file-reader](https://www.tensorflow.org/api_docs/python/tf/WholeFileReader) would *dequeue* from that. Checking [this](https://github.com/tensorflow/models/blob/master/tutorials/image/cifar10/cifar10_input.py) file, I am guessing that [fixed-length-reader](https://www.tensorflow.org/api_docs/python/tf/FixedLengthRecordReader) and similarly our [TFRecordReader](https://www.tensorflow.org/api_docs/python/tf/TFRecordReader) are creating their own *queue*s and iterators to traverse the data files given to them and the *read()* function does the dequeueing as usual.\n",
+    "This *dequeue* operation needs a *queue* to work on. In other problems involving multiple input files where each sample **is** its own file, we would use a [filename queue producer](https://www.tensorflow.org/api_docs/python/tf/train/string_input_producer) and then a [whole-file-reader](https://www.tensorflow.org/api_docs/python/tf/WholeFileReader) would *dequeue* from that. Checking [this](https://github.com/tensorflow/models/blob/master/tutorials/image/cifar10/cifar10_input.py) file, I am guessing that [fixed-length-reader](https://www.tensorflow.org/api_docs/python/tf/FixedLengthRecordReader) and similarly our [TFRecordReader](https://www.tensorflow.org/api_docs/python/tf/TFRecordReader) are creating their own *queue*s and iterators to traverse the data files given to them and the *read()* function does the dequeueing as usual. As I said, I am not sure.\n",
     "\n",
     "\n",
     "### Working with a set of images using WholeFileReader\n",
@@ -1852,12 +1851,12 @@
     "    return image\n",
     "\n",
     "```\n",
-    "You can generate your filename_queue easily by manipulating strings in python then using the [filename queue producer](https://www.tensorflow.org/api_docs/python/tf/train/string_input_producer) as shown in the first line of [this example code](https://www.tensorflow.org/programmers_guide/reading_data#file_formats#csv_files) found in the documentation.\n",
+    "You can generate your *filename_queue* easily by manipulating strings in python then using the [filename queue producer](https://www.tensorflow.org/api_docs/python/tf/train/string_input_producer) as shown in the first line of [this example code](https://www.tensorflow.org/programmers_guide/reading_data#file_formats#csv_files) found in the documentation.\n",
     "\n",
     "\n",
     "### Batching\n",
     "\n",
-    "Just uncomment the lines above but do not forget to change \n",
+    "Just uncomment the lines in the above cell but also do not forget to change \n",
     "\n",
     "```python\n",
     "image = tf.reshape(image, [1,512,512,1])\n",
